update model job and resume