@@ -4,11 +4,13 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
+import vn.hp.jobhunter.domain.Company;
 import vn.hp.jobhunter.domain.Job;
 import vn.hp.jobhunter.domain.Skill;
 import vn.hp.jobhunter.domain.response.ResultPaginationDTO;
 import vn.hp.jobhunter.domain.response.job.ResCreateJobDTO;
 import vn.hp.jobhunter.domain.response.job.ResUpdateJobDTO;
+import vn.hp.jobhunter.repository.CompanyRepository;
 import vn.hp.jobhunter.repository.JobRepository;
 import vn.hp.jobhunter.repository.SkillRepository;
 
@@ -20,10 +22,12 @@ import java.util.stream.Collectors;
 public class JobService {
     private final JobRepository jobRepository;
     private final SkillRepository skillRepository;
+    private final CompanyRepository companyRepository;
 
-    public JobService(JobRepository jobRepository, SkillRepository skillRepository) {
+    public JobService(JobRepository jobRepository, SkillRepository skillRepository, CompanyRepository companyRepository) {
         this.jobRepository = jobRepository;
         this.skillRepository = skillRepository;
+        this.companyRepository = companyRepository;
     }
 
     public ResCreateJobDTO create(Job job){
@@ -31,6 +35,11 @@ public class JobService {
             List<Long> reqSkills = job.getSkills().stream().map(Skill::getId).toList();
             List<Skill> dbSkills = this.skillRepository.findByIdIn(reqSkills);
             job.setSkills(dbSkills);
+        }
+        // check company
+        if (job.getCompany() != null) {
+            Optional<Company> cOptional = this.companyRepository.findById(job.getCompany().getId());
+            cOptional.ifPresent(job::setCompany);
         }
 
         Job curr = this.jobRepository.save(job);
@@ -55,33 +64,59 @@ public class JobService {
         return res;
     }
 
-    public ResUpdateJobDTO update(Job job){
-        if (job.getSkills() != null){
-            List<Long> reqSkills = job.getSkills().stream().map(Skill::getId).toList();
+    public ResUpdateJobDTO update(Job j, Job jobInDB) {
+
+        // check skills
+        if (j.getSkills() != null) {
+            List<Long> reqSkills = j.getSkills()
+                    .stream().map(Skill::getId)
+                    .collect(Collectors.toList());
+
             List<Skill> dbSkills = this.skillRepository.findByIdIn(reqSkills);
-            job.setSkills(dbSkills);
+            jobInDB.setSkills(dbSkills);
         }
 
-        Job curr = this.jobRepository.save(job);
-        // Convert response
-        ResUpdateJobDTO res = new ResUpdateJobDTO();
-        res.setId(curr.getId());
-        res.setName(curr.getName());
-        res.setLocation(curr.getLocation());
-        res.setSalary(curr.getSalary());
-        res.setLevel(curr.getLevel());
-        res.setStartDate(curr.getStartDate());
-        res.setEndDate (curr.getEndDate());
-        res.setActive (curr.isActive());
-        res.setUpdatedAt(curr.getUpdatedAt());
-        res.setUpdatedBy(curr.getUpdatedBy());
-        if (curr.getSkills() != null) {
-            List<String> skills = curr.getSkills()
+        // check company
+        if (j.getCompany() != null) {
+            Optional<Company> cOptional = this.companyRepository.findById(j.getCompany().getId());
+            cOptional.ifPresent(jobInDB::setCompany);
+        }
+
+        // update correct info
+        jobInDB.setName(j.getName());
+        jobInDB.setSalary(j.getSalary());
+        jobInDB.setQuantity(j.getQuantity());
+        jobInDB.setLocation(j.getLocation());
+        jobInDB.setLevel(j.getLevel());
+        jobInDB.setStartDate(j.getStartDate());
+        jobInDB.setEndDate(j.getEndDate());
+        jobInDB.setActive(j.isActive());
+
+        // update job
+        Job currentJob = this.jobRepository.save(jobInDB);
+
+        // convert response
+        ResUpdateJobDTO dto = new ResUpdateJobDTO();
+        dto.setId(currentJob.getId());
+        dto.setName(currentJob.getName());
+        dto.setSalary(currentJob.getSalary());
+        dto.setQuantity(currentJob.getQuantity());
+        dto.setLocation(currentJob.getLocation());
+        dto.setLevel(currentJob.getLevel());
+        dto.setStartDate(currentJob.getStartDate());
+        dto.setEndDate(currentJob.getEndDate());
+        dto.setActive(currentJob.isActive());
+        dto.setUpdatedAt(currentJob.getUpdatedAt());
+        dto.setUpdatedBy(currentJob.getUpdatedBy());
+
+        if (currentJob.getSkills() != null) {
+            List<String> skills = currentJob.getSkills()
                     .stream().map(Skill::getName)
                     .collect(Collectors.toList());
-            res.setSkills (skills);
+            dto.setSkills(skills);
         }
-        return res;
+
+        return dto;
     }
 
     public boolean jobExisted(long id){
@@ -109,5 +144,9 @@ public class JobService {
         rs.setMeta(meta);
         rs.setResult(jobPage.getContent());
         return rs;
+    }
+
+    public Optional<Job> findById(long id) {
+        return this.jobRepository.findById(id);
     }
 }
